--- a/aliases/apachemahout.yml
+++ b/aliases/apachemahout.yml
@@ -1,22 +1,6 @@
-"akm":
-- "akm@apache.org"
-- "akm@unknown"
-"andrew.musselman":
-- "andrew.musselman@lucidworks.com"
-- "andrew.musselman@accenture.com"
-"gcapan":
-- "gcapan@anadolu.edu.tr"
-- "gcapan@unknown"
-- "gcapan@apache.org"
-- "gkhncpn@gmail.com"
-"sowen":
-- "sowen@cloudera.com"
-- "srowen@apache.org"
-"sslavic":
-- "sslavic@gmail.com"
-- "sslavic@unknown"
-"suneel.marthi":
-- "smarthi@apache.org"
-- "smarthi@unknown"
-"vanstee":
-- "dustinvanstee@gmail.com"
+akm@apache.org: [akm@unknown]
+andrew.musselman@accenture.com: [andrew.musselman@lucidworks.com]
+gcapan@anadolu.edu.tr: [gcapan@unknown, gcapan@apache.org, gcapan@anadolu.edu.tr]
+smarthi@apache.org: [smarthi@unknown]
+srowen@apache.org: [sowen@cloudera.com]
+sslavic@gmail.com: [sslavic@unknown]
