Added author login extractor via API

--- a/aliases/qemu.yml
+++ b/aliases/qemu.yml
@@ -1,168 +1,168 @@
-aclindsa@gmail.com: [alindsay@codeaurora.org]
+adam@os.inf.tu-dresden.de: [adam@l4re.org, damm@opensource.se]
 afaerber@suse.de: [afaerber@opensolaris.org]
 airlied@redhat.com: [airlied@linux.ie]
-ajia@redhat.com: [cjia@nvidia.com, raji@linux.vnet.ibm.com]
-akrowiak@linux.ibm.com: [akrowiak@linux.vnet.ibm.com]
-aleksandar.markovic@mips.com: [aleksandar.markovic@imgtec.com]
+ajia@redhat.com: [raji@linux.vnet.ibm.com, cjia@nvidia.com]
+akrowiak@linux.vnet.ibm.com: [akrowiak@linux.ibm.com]
+aleksandar.markovic@imgtec.com: [aleksandar.markovic@mips.com]
 alex.williamson@hp.com: [alex.williamson@redhat.com]
-alex@e8storage.com: [alex@alex.org.uk, alex@csgraf.de, alex@bennee.com, alex@securiforest.com]
-aliguori@us.ibm.com: [aliguori@amazon.com, aliguori@c046a42c-6fe2-441c-8c8c-71466251a162]
-alistair.francis@xilinx.com: [alistair.francis@wdc.com]
+alex@e8storage.com: [alex@csgraf.de, alex@bennee.com, alex@securiforest.com, alex@alex.org.uk]
+aliguori@us.ibm.com: [aliguori@c046a42c-6fe2-441c-8c8c-71466251a162, aliguori@amazon.com]
+alindsay@codeaurora.org: [aclindsa@gmail.com]
+alistair.francis@wdc.com: [alistair.francis@xilinx.com]
 amarkovic@wavecomp.com: [smarkovic@wavecomp.com, makovick@gmail.com]
-amdragon@mit.edu: [artagnon@gmail.com]
-ancheng@ubnt.com: [fan.chen@easystack.cn]
-andre.przywara@calxeda.com: [andre.przywara@amd.com]
-andreas.faerber: [andreas.faerber@web.de]
-andreast@freebsd.org: [andreas@grapentin.org]
-andrew@aoates.org: [andrew@aj.id.au, andrew@andrewdutcher.com, andrey@xdel.ru]
-anton@au1.ibm.com: [anton@samba.org]
-armbru@redhat.com: [armbru@pond.sub.org]
+andre.przywara@amd.com: [andre.przywara@calxeda.com]
+andreas.faerber@web.de: [andreas.faerber]
+andreas@grapentin.org: [andreast@freebsd.org]
+andrey@xdel.ru: [andrew@aj.id.au, andrew@andrewdutcher.com, andrew@aoates.org]
+anton@samba.org: [anton@au1.ibm.com]
+armbru@pond.sub.org: [armbru@redhat.com]
+artagnon@gmail.com: [amdragon@mit.edu]
 atar4qemu@gmail.com: [atar4qemu@googlemail.com]
 azu@sysgo.de: [kazu@codesourcery.com]
-balrog@zabor.org: [balrog@c046a42c-6fe2-441c-8c8c-71466251a162]
-ben@skyportsystems.com: [ben@xrsa.net, benh@kernel.crashing.org]
+balrog@c046a42c-6fe2-441c-8c8c-71466251a162: [balrog@zabor.org]
+ben@xrsa.net: [benh@kernel.crashing.org, ben@skyportsystems.com]
 benoit.canet@irqsave.net: [benoit.canet@gmail.com, benoit.canet@nodalink.com]
-bernhard.kohl@nsn.com: [bernhard.kohl@gmx.net]
-bharata@linux.ibm.com: [bharata@linux.vnet.ibm.com]
+bernhard.kohl@gmx.net: [bernhard.kohl@nsn.com]
+bharata@linux.vnet.ibm.com: [bharata@linux.ibm.com]
 boqun.feng@gmail.com: [boqun.feng@intel.com]
-bradh@frogmouth.net: [brad@comstyle.com]
+brad@comstyle.com: [bradh@frogmouth.net]
 brogers@novell.com: [brogers@suse.com]
-cdall@cs.columbia.edu: [c.dall@virtualopensystems.com]
-chenhanxiao@gmail.com: [chenhanxiao@cn.fujitsu.com]
-christoph.egger@amd.com: [christoph.seifert@posteo.de]
+c.dall@virtualopensystems.com: [cdall@cs.columbia.edu]
+chenhanxiao@cn.fujitsu.com: [chenhanxiao@gmail.com]
+chris@mips.com: [chris@include.gr, chrisj@rtems.org, chris@arachsys.com, chrisw@sous-sol.org]
+christoph.seifert@posteo.de: [christoph.egger@amd.com]
 christophe.lyon@linaro.org: [christophe.lyon@st.com]
-chrisw@sous-sol.org: [chris@mips.com, chrisj@rtems.org, chris@arachsys.com, chris@include.gr]
-claudio.fontana@linaro.org: [claudio.fontana@huawei.com]
+claudio.fontana@huawei.com: [claudio.fontana@linaro.org]
 clg@fr.ibm.com: [clg@kaod.org]
 corey@kansanian.com: [coreyb@linux.vnet.ibm.com]
 crosthwaite.peter@gmail.com: [crosthwaitepeter@gmail.com]
-damm@opensource.se: [adam@os.inf.tu-dresden.de, adam@l4re.org]
 dan@kernelim.com: [dan@wendan.org]
-danielhb@linux.vnet.ibm.com: [daniel@drv.nu, danielsh@apache.org, daniel@daynix.com]
-dantesu@gmail.com: [dantesu@faraday-tech.com]
-david@gibson.dropbear.id.au: [david@redhat.com]
-dos@dosowisko.net: [edos@virtuozzo.mipt.ru]
+danielhb@linux.vnet.ibm.com: [daniel@daynix.com, danielsh@apache.org, daniel@drv.nu]
+dantesu@faraday-tech.com: [dantesu@gmail.com]
+david@redhat.com: [david@gibson.dropbear.id.au]
+dnikolic@wavecomp.com: [nickolai@csail.mit.edu]
+drjones@redhat.com: [rjones@redhat.com]
 dsahern@gmail.com: [daahern@cisco.com]
-edgar.iglesias@petalogix.com: [edgar.iglesias@xilinx.com, edgar.iglesias@gmail.com]
+edgar.iglesias@xilinx.com: [edgar.iglesias@petalogix.com, edgar.iglesias@gmail.com]
+edos@virtuozzo.mipt.ru: [dos@dosowisko.net]
 ego@linux.vnet.ibm.com: [ego@in.ibm.com]
 eric.auger@redhat.com: [eric.auger@linaro.org]
 ericj@mips.com: [eric@eukrea.com]
 eswierk@aristanetworks.com: [eswierk@skyportsystems.com]
-frankja@linux.ibm.com: [frankja@linux.vnet.ibm.com]
-gang.chen@sunrus.com.cn: [fan.chen@easystack.cn, tangchen@cn.fujitsu.com]
-geofft@ldpreload.com: [geoff@hostfission.com]
+frankja@linux.vnet.ibm.com: [frankja@linux.ibm.com]
+geoff@hostfission.com: [geofft@ldpreload.com]
 git@johnthomson.fastmail.com.au: [git@andred.net]
-glommer@redhat.com: [glommer@mothafucka.localdomain]
-grant.likely@secretlab.ca: [grant.likely@linaro.org]
+glommer@mothafucka.localdomain: [glommer@redhat.com]
+grant.likely@linaro.org: [grant.likely@secretlab.ca]
 gson@gson.org: [sson@freebsd.org]
 guz.fnst@cn.fujitsu.com: [lig.fnst@cn.fujitsu.com]
-hch@brick.lst.de: [hch@lst.de]
+hch@lst.de: [hch@brick.lst.de]
 hollisb@us.ibm.com: [hollis@penguinppc.org]
-huth@tuxfamily.org: [thuth@redhat.com, thuth@de.ibm.com, thuth@linux.vnet.ibm.com]
 i.mitsyanko@gmail.com: [i.mitsyanko@samsung.com]
 imbrenda@linux.vnet.ibm.com: [brendan@bslabs.net]
-j@jannau.net: [j@bitron.ch]
+j@bitron.ch: [j@jannau.net]
 james.hogan@mips.com: [james.hogan@imgtec.com]
 jamie@jamieiles.com: [james@ejbdigital.com.au]
-jan.dakinevich@virtuozzo.com: [jan.dakinevich@gmail.com]
+jan.dakinevich@gmail.com: [jan.dakinevich@virtuozzo.com]
 jan.kiszka@siemens.com: [jan.kiszka@web.de]
 jbaron@redhat.com: [jbaron@akamai.com]
 jcd@tribudubois.net: [jcd@jcd-laptop.(none)]
-jes@sgi.com: [jens@linux.vnet.ibm.com]
+jens@linux.vnet.ibm.com: [jes@sgi.com]
 jfreimann@redhat.com: [jfreiman@redhat.com]
-jhindin@daynix.com: [yhindin@redhat.com]
-jim@jtan.com: [jim@meyering.net]
-jing2.liu@linux.intel.com: [jingqi.liu@intel.com]
+jim@meyering.net: [jim@jtan.com]
+jingqi.liu@intel.com: [jing2.liu@linux.intel.com]
 jiri@mellanox.com: [jiri@resnulli.us]
 jjherne@linux.vnet.ibm.com: [jjherne@us.ibm.com]
-joe@perches.com: [joel@jms.id.au]
+jliang@xilinx.com: [julian@codesourcery.com]
+joel@jms.id.au: [joe@perches.com]
 joserz@linux.ibm.com: [joserz@linux.vnet.ibm.com]
 josh.durgin@inktank.com: [josh.durgin@dreamhost.com]
-julian@codesourcery.com: [jliang@xilinx.com]
-ken@codelabs.ch: [keno@juliacomputing.com]
-krahmer@suse.de: [karahmed@amazon.de]
+karahmed@amazon.de: [krahmer@suse.de]
+kbastian@mail.uni-paderborn.de: [sebastian@macke.de]
+keno@juliacomputing.com: [ken@codelabs.ch]
 lars@segv.dk: [mars@linux.vnet.ibm.com]
-lcapitulino@redhat.com: [lcapitulino@gmail.com]
+lcapitulino@gmail.com: [lcapitulino@redhat.com]
 linux@eikelenboom.it: [linux@roeck-us.net]
-liq3ea@163.com: [liq3ea@gmail.com]
+liq3ea@gmail.com: [liq3ea@163.com]
 liuyuan@cmss.chinamobile.com: [liuyuan1@cmiot.chinamobile.com]
 luc.michel@git.antfield.fr: [luc.michel@greensocs.com]
-mail@kitsu.me: [mail@kevin-wolf.de, mail@void.so, mail@sebastianbauer.info, malc@c046a42c-6fe2-441c-8c8c-71466251a162]
+malc@c046a42c-6fe2-441c-8c8c-71466251a162: [mail@kitsu.me, mail@void.so, mail@kevin-wolf.de,
+  mail@sebastianbauer.info]
 mans@mansr.com: [mars@linux.vnet.ibm.com]
-mar.krzeminski@gmail.com: [marcin.krzeminski@nokia.com]
 mar@sysgo.com: [mars@linux.vnet.ibm.com]
-marcandre.lureau@redhat.com: [marcandre.lureau@gmail.com]
+marcandre.lureau@gmail.com: [marcandre.lureau@redhat.com]
 marcel@redhat.com: [marcel.a@redhat.com]
-markmc@redhat.com: [markmb@redhat.com]
-martin.mohring@opensuse.org: [martin.mohring@5edatasoft.com]
-martin@decky.cz: [martin@duskware.de, martin@lispworks.com]
-matthew.fortune@imgtec.com: [matthew.fortune@mips.com]
-matze@braunis.de: [matz@suse.de]
+marcin.krzeminski@nokia.com: [mar.krzeminski@gmail.com]
+markmb@redhat.com: [markmc@redhat.com]
+martin.mohring@5edatasoft.com: [martin.mohring@opensuse.org]
+martin@duskware.de: [martin@lispworks.com, martin@decky.cz]
+matthew.fortune@mips.com: [matthew.fortune@imgtec.com]
+matz@suse.de: [matze@braunis.de]
 maxa@catit.be: [max@tyndur.org]
-mike@marineau.org: [mike@very.puzzling.org, mikem@ring3k.org, mikey@neuling.org]
+michael@ellerman.id.au: [mmishael@redhat.com, michael@walle.cc, michael@inetric.com,
+  michael@ozlabs.org]
+mike@very.puzzling.org: [mikey@neuling.org, mike@marineau.org, mikem@ring3k.org]
 mimu@linux.ibm.com: [mimu@linux.vnet.ibm.com]
-mmishael@redhat.com: [michael@ozlabs.org, michael@walle.cc, michael@ellerman.id.au,
-  michael@inetric.com]
-morita.kazutaka@gmail.com: [morita.kazutaka@lab.ntt.co.jp]
+morita.kazutaka@lab.ntt.co.jp: [morita.kazutaka@gmail.com]
 muriloo@linux.ibm.com: [muriloo@linux.vnet.ibm.com]
-nickolai@csail.mit.edu: [dnikolic@wavecomp.com, nikolaus@rath.org]
+nikolaus@rath.org: [nickolai@csail.mit.edu]
 nikunj@linux.vnet.ibm.com: [nikunj@linux.ibm.com]
 okrishtal@parallels.com: [okrishtal@virtuozzo.com]
-padmanabh.ratnakar@avagotech.com: [padmanabh.ratnakar@emulex.com]
-pasic@linux.ibm.com: [pasic@linux.vnet.ibm.com]
-paul@archlinuxmips.org: [wpaul@windriver.com, paul@codesourcery.com]
-pbonzini@redhat.com: [pbonini@redhat.com]
+padmanabh.ratnakar@emulex.com: [padmanabh.ratnakar@avagotech.com]
+pasic@linux.vnet.ibm.com: [pasic@linux.ibm.com]
+pbonini@redhat.com: [pbonzini@redhat.com]
 petar.jovanovic@imgtec.com: [petar.jovanovic@rt-rk.com]
-peter.crosthwaite@xilinx.com: [peter.crosthwaite@petalogix.com]
-peter@lekensteyn.nl: [peterx@redhat.com, peter@korsgaard.com, peter@gridcentric.ca]
+peter.crosthwaite@petalogix.com: [peter.crosthwaite@xilinx.com]
+peter@korsgaard.com: [peter@lekensteyn.nl, peter@gridcentric.ca, peterx@redhat.com]
 phil@philkern.de: [phil@philjordan.eu]
 pl@dlhnet.de: [pl@kamp.de]
-pmorel@linux.vnet.ibm.com: [pmoore@redhat.com]
-qemu-devel@paulsd.com: [qemu-devel@nongnu.org]
+pmoore@redhat.com: [pmorel@linux.vnet.ibm.com]
+qemu-devel@nongnu.org: [qemu-devel@paulsd.com]
 quintela@trasno.org: [quintela@redhat.com]
-rabin@rab.in: [rabinv@axis.com]
-riku.voipio@linaro.org: [riku.voipio@iki.fi, riku.voipio@nokia.com]
-rjones@redhat.com: [drjones@redhat.com]
+rabinv@axis.com: [rabin@rab.in]
+riku.voipio@iki.fi: [riku.voipio@linaro.org, riku.voipio@nokia.com]
 rkagan@virtuozzo.com: [rkagan@parallels.com]
 rob.herring@linaro.org: [rob.herring@calxeda.com]
 robert.hu@linux.intel.com: [robert.hu@intel.com]
 rollandf@gmail.com: [roland@purestorage.com]
-rth@twiddle.net: [rth@redhat.com, rth@anchor.twiddle.home]
+rth@twiddle.net: [rth@anchor.twiddle.home, rth@redhat.com]
 samuel.thibault@ens-lyon.org: [samuel.thibault@gnu.org]
-sandipan@linux.ibm.com: [sandipan@linux.vnet.ibm.com]
+sandipan@linux.vnet.ibm.com: [sandipan@linux.ibm.com]
 schwab@suse.de: [schwab@linux-m68k.org]
-sebastian@macke.de: [kbastian@mail.uni-paderborn.de]
 sfeldma@gmail.com: [sfeldma@cumulusnetworks.com]
-shannon.zhao@linaro.org: [shannon.zhaosl@gmail.com]
+shannon.zhaosl@gmail.com: [shannon.zhao@linaro.org]
 shmulik.ladkani@gmail.com: [shmulik.ladkani@ravellosystems.com]
 somlo@cmu.edu: [gsomlo@gmail.com]
-sripathik@in.ibm.com: [sripathi@sripathi.in.ibm.com]
-stefanb@linux.vnet.ibm.com: [stefanb@us.ibm.com, stefan@kiwi.(none), stefanha@redhat.com,
-  stefan@weilnetz.de, stefanha@linux.vnet.ibm.com]
-thomas@codesourcery.com: [thomas@monjalon.net, thomaswk@google.com, thomas@horsten.com]
+sripathi@sripathi.in.ibm.com: [sripathik@in.ibm.com]
+stefan@weilnetz.de: [stefanha@redhat.com, stefan@kiwi.(none), stefanb@linux.vnet.ibm.com,
+  stefanb@us.ibm.com, stefanha@linux.vnet.ibm.com]
+tangchen@cn.fujitsu.com: [fan.chen@easystack.cn, ancheng@ubnt.com, gang.chen@sunrus.com.cn]
+thomas@codesourcery.com: [thomaswk@google.com, thomas@horsten.com, thomas@monjalon.net]
+thuth@redhat.com: [thuth@de.ibm.com, thuth@linux.vnet.ibm.com, huth@tuxfamily.org]
 tiejun.chen@intel.com: [tiejun.chen@windriver.com]
-tomoki.sekiyama.qu@hitachi.com: [tomoki.sekiyama@hds.com]
-tubo@linux.vnet.ibm.com: [otubo@linux.vnet.ibm.com, otubo@redhat.com]
+tomoki.sekiyama@hds.com: [tomoki.sekiyama.qu@hitachi.com]
+tubo@linux.vnet.ibm.com: [otubo@redhat.com, otubo@linux.vnet.ibm.com]
 vapier@chromium.org: [vapier@gentoo.org]
-vijaykumar@bravegnu.org: [vijaykumar@zilogic.com, vijaya.kumar@caviumnetworks.com,
-  vijaya.kumar@cavium.com]
+vijaykumar@bravegnu.org: [vijaya.kumar@caviumnetworks.com, vijaya.kumar@cavium.com,
+  vijaykumar@zilogic.com]
 viktor.prutyanov@virtuozzo.com: [viktor.prutyanov@phystech.edu]
 vincent@bernat.im: [vincent@vincent-minet.net]
 vsementsov@parallels.com: [vsementsov@virtuozzo.com]
 walling@linux.vnet.ibm.com: [walling@linux.ibm.com]
-wang.yong155@zte.com.cn: [wang.guang55@zte.com.cn]
-wanpeng.li@linux.intel.com: [wanpeng.li@hotmail.com, wanpengli@tencent.com]
+wang.guang55@zte.com.cn: [wang.yong155@zte.com.cn]
+wanpengli@tencent.com: [wanpeng.li@linux.intel.com, wanpeng.li@hotmail.com]
 wei.w.wang@intel.com: [wei.y.yang@intel.com]
-weil@mail.berlios.de: [wei@redhat.com]
-xiaoguangrong@tencent.com: [xiaoguangrong@linux.vnet.ibm.com]
+wei@redhat.com: [weil@mail.berlios.de]
+wpaul@windriver.com: [paul@codesourcery.com, paul@archlinuxmips.org]
+xiaoguangrong@linux.vnet.ibm.com: [xiaoguangrong@tencent.com]
 yamahata@valinux.co.jp: [yamahata@private.email.ne.jp]
-yang.zhong@intel.com: [yang.z.zhang@intel.com]
-yasmins@linux.vnet.ibm.com: [yasmins@linux.ibm.com]
-yi.z.zhang@linux.intel.com: [yang.z.zhang@intel.com]
-yongbok.kim@imgtec.com: [yongbok.kim@mips.com]
+yang.z.zhang@intel.com: [yang.zhong@intel.com, yi.z.zhang@linux.intel.com]
+yasmins@linux.ibm.com: [yasmins@linux.vnet.ibm.com]
+yhindin@redhat.com: [jhindin@daynix.com]
+yongbok.kim@mips.com: [yongbok.kim@imgtec.com]
 yu.ning@linux.intel.com: [yu.ning@intel.com]
-zhanghy@sangfor.com.cn: [zhanghy@sangfor.com]
-zhangleiqiang@huawei.com: [zhangweiping@didichuxing.com]
+zhanghy@sangfor.com: [zhanghy@sangfor.com.cn]
 zhangsju@gmail.com: [zhongjun@sangfor.com.cn]
+zhangweiping@didichuxing.com: [zhangleiqiang@huawei.com]
 zhlcindy@linux.vnet.ibm.com: [zhlcindy@gmail.com]
 zyimin@linux.vnet.ibm.com: [zyimin@linux.ibm.com, zyimin@cn.ibm.com]
