--- a/config.yml
+++ b/config.yml
@@ -1,5 +1,5 @@
 !!python/object:__main__.Configuration
-repositoryUrl: 'https://github.com/qemu/qemu'
-repositoryPath: 'D:\Repos\qemu'
+repositoryUrl: 'https://github.com/apache/mahout'
+repositoryPath: 'D:\Repos\apachemahout'
 analysisOutputPath: 'D:\Repos\analysisOutput'
-aliasPath: 'D:\Repos\DevNetworkPython\aliases\qemu.yml'
+aliasPath: 'D:\Repos\DevNetworkPython\aliases\apachemahout.yml'
