--- a/configs/apachemahout.yml
+++ b/configs/apachemahout.yml
@@ -1,5 +1,5 @@
 !!python/object:__main__.Configuration
 repositoryUrl: 'https://github.com/apache/mahout'
-repositoryPath: 'C:\Users\denio\source\repos\apachemahout'
-analysisOutputPath: 'C:\Users\denio\source\repos\analysisOutput'
-aliasPath: 'C:\Users\denio\source\repos\DevNetworkPython\aliases\apachemahout.yml'
+repositoryPath: 'D:\repos\apachemahout'
+analysisOutputPath: 'D:\repos\analysisOutput'
+aliasPath: 'D:\repos\DevNetworkPython\aliases\apachemahout.yml'
