--- a/configs/apachemahout.yml
+++ b/configs/apachemahout.yml
@@ -1,5 +1,7 @@
 !!python/object:__main__.Configuration
 repositoryUrl: 'https://github.com/apache/mahout'
-repositoryPath: 'D:\repos\apachemahout'
-analysisOutputPath: 'D:\repos\analysisOutput'
-aliasPath: 'D:\repos\DevNetworkPython\aliases\apachemahout.yml'
+repositoryShortname: 'apache/mahout'
+repositoryPath: 'D:\Repos\apachemahout'
+analysisOutputPath: 'D:\Repos\analysisOutput'
+aliasPath: 'D:\Repos\DevNetworkPython\aliases\apachemahout.yml'
+aliasSimilarityMaxDistance: 0.25
