--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 !!python/object:__main__.Configuration
-repositoryUrl: "https://github.com/apache/gora"
-repositoryShortname: "apache/gora"
-repositoryPath: 'D:\Repos\apachegora'
+repositoryUrl: "https://github.com/eclipse-cdt/cdt"
+repositoryShortname: "eclipse-cdt/cdt"
+repositoryPath: 'D:\Repos\cdt'
 analysisOutputPath: 'D:\Repos\analysisOutput'
-aliasPath: 'D:\Repos\DevNetworkPython\aliases\apachegora.yml'
+aliasPath: 'D:\Repos\DevNetworkPython\aliases\eclipsecdt.yml'
 aliasSimilarityMaxDistance: 0.25
