--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 !!python/object:__main__.Configuration
-repositoryUrl: "https://github.com/eclipse/rt.equinox.bundles"
-repositoryShortname: "eclipse/rt.equinox.bundles"
-repositoryPath: 'D:\Repos\rt.equinox.bundles'
-analysisOutputPath: 'D:\Repos\analysisOutput\eclipse-rt.equinox.bundles'
-aliasPath: 'D:\Repos\analysisOutput\aliases\eclipse-rt.equinox.bundles.yml'
+repositoryUrl: "https://github.com/dotnet/core"
+repositoryShortname: "dotnet/core"
+repositoryPath: 'C:\repos\dotnet.core'
+analysisOutputPath: 'C:\repos\analysisOutput\dotnet.core'
+aliasPath: 'C:\repos\analysisOutput\aliases\dotnet.core.yml'
 aliasSimilarityMaxDistance: 0.25
