--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
 !!python/object:__main__.Configuration
-repositoryUrl: "https://github.com/dotnet/core"
-repositoryShortname: "dotnet/core"
-repositoryPath: 'C:\repos\dotnet.core'
-analysisOutputPath: 'C:\repos\analysisOutput\dotnet.core'
-aliasPath: 'C:\repos\analysisOutput\aliases\dotnet.core.yml'
+repositoryUrl: "https://github.com/denious/DevNetworkPython"
+repositoryShortname: "denious/DevNetworkPython"
+repositoryPath: 'C:\repos\DevNetworkPython'
+analysisOutputPath: 'C:\repos\analysisOutput\denious.DevNetworkPython'
+aliasPath: 'C:\repos\analysisOutput\aliases\denious.DevNetworkPython.yml'
 aliasSimilarityMaxDistance: 0.25
