Added new metrics: - Number of comments per issue - Number of experienced developers - Number of authors with centrality > 0.5 - Percentage of sponsored developers

--- a/configs/dotnet.core.yml
+++ b/configs/dotnet.core.yml
@@ -2,6 +2,6 @@
 repositoryUrl: 'https://github.com/dotnet/core'
 repositoryShortname: 'dotnet/core'
 repositoryPath: 'C:\Repos\dotnet.core'
-analysisOutputPath: 'C:\Repos\analysisOutput\dotnet.core'
+analysisOutputPath: 'C:\Repos\analysisOutput'
 aliasPath: 'C:\Repos\analysisOutput\aliases\dotnet.core.yml'
 aliasSimilarityMaxDistance: 0.25
